--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
 }
-
+//fc696b6563ce4a7bbf0c5f3295e51d99c42cff33
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
